--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npm run test:html",
     "test:html": "html-validate *.html",
     "build": "npm-run-all build:* && npm run test",
-    "build:sass": "sass --style=compressed --no-source-map css/style.scss:css/style.css",
+    "build:sass": "sass --style=compressed --no-source-map sass/style.scss:css/style.css",
     "build:autoprefixer": "postcss css/style.css --use autoprefixer -d css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
